--- a/ApiPracticeDemoUi/MainWindow.xaml
+++ b/ApiPracticeDemoUi/MainWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ApiPracticeDemoUi"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800"
+        Loaded="MainWindow_OnLoaded">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
@@ -13,11 +14,12 @@
         </Grid.RowDefinitions>
 
         <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Center">
-            <Button x:Name="previousImageButton" Padding="15" Margin="15">Previous</Button>
-            <Button x:Name="sunInformationButton" Padding="15" Margin="15">Sun Information</Button>
-            <Button x:Name="nextImageButton" Padding="15" Margin="15">Next</Button>
+            <Button x:Name="previousImageButton" Padding="15" Margin="15" Click="previousImageButton_Click">Previous</Button>
+            <Button x:Name="sunInformationButton" Padding="15" Margin="15" Click="sunInformationButton_Click">Sun Information</Button>
+            <Button x:Name="nextImageButton" Padding="15" Margin="15" Click="nextImageButton_Click">Next</Button>
         </StackPanel>
 
-        <Image Grid.Row="1" x:Name="comicImage" />
+
+        <Image Grid.Row="1" x:Name="comicImage" Margin="20" />
     </Grid>
 </Window>
